tests/snapshots/examples_fixtures/lint__complexity_warnings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/lint/complexity_warnings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
