tests/snapshots/examples_fixtures/lint__warnings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/lint/warnings.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
